--- a/BabySmash/MainWindow.xaml
+++ b/BabySmash/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Class="BabySmash.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:BabySmash"
     Title="Baby Smash by Scott Hanselman - http://www.hanselman.com/babysmash"
