--- a/BabySmash/Shapes/FunCursor1.xaml
+++ b/BabySmash/Shapes/FunCursor1.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	x:Class="BabySmash.FunCursor1"
 	x:Name="UserControl">
