--- a/BabySmash/Shapes/allShapes.xaml
+++ b/BabySmash/Shapes/allShapes.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns="https://github.com/avaloniaui"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
 	<Grid x:Name="LayoutRoot">
 		<Grid.RowDefinitions>
