--- a/BabySmash/Shapes/CoolRectangle.axaml
+++ b/BabySmash/Shapes/CoolRectangle.axaml
@@ -1,34 +1,41 @@
 ﻿<UserControl
-	xmlns="https://github.com/avaloniaui"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	mc:Ignorable="d"
-	x:Class="BabySmash.CoolRectangle"
-	x:Name="UserControl"
-	d:DesignWidth="6.667" d:DesignHeight="10">
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    x:Class="BabySmash.CoolRectangle"
+    x:Name="UserControl"
+    d:DesignWidth="6.667" d:DesignHeight="10">
     <UserControl.Resources>
-        <Storyboard x:Key="Eyes">
-            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="Eyes" Storyboard.TargetProperty="(UIElement.Opacity)" RepeatBehavior="Forever">
-                <SplineDoubleKeyFrame KeyTime="00:00:02.1000000" Value="1"/>
-                <SplineDoubleKeyFrame KeyTime="00:00:02.1000000" Value="0"/>
-                <SplineDoubleKeyFrame KeyTime="00:00:02.300000" Value="0"/>
-                <SplineDoubleKeyFrame KeyTime="00:00:02.300000" Value="1"/>
-                <SplineDoubleKeyFrame KeyTime="00:00:7.300000" Value="1"/>
-            </DoubleAnimationUsingKeyFrames>
-        </Storyboard>
+        <Style Selector="Canvas#Eyes">
+            <Style.Animations>
+                <Animation Duration="0:0:7.3" IterationCount="Infinite">
+                    <KeyFrame KeyTime="00:00:02.1">
+	                    <Setter Property="Opacity" Value="1"/>
+                    </KeyFrame>
+                    <KeyFrame KeyTime="00:00:02.1">
+	                    <Setter Property="Opacity" Value="0"/>
+                    </KeyFrame>
+                    <KeyFrame KeyTime="00:00:02.3">
+	                    <Setter Property="Opacity" Value="0"/>
+                    </KeyFrame>
+                    <KeyFrame KeyTime="00:00:02.3">
+	                    <Setter Property="Opacity" Value="1"/>
+                    </KeyFrame>
+                    <KeyFrame KeyTime="00:00:7.3">
+	                    <Setter Property="Opacity" Value="1"/>
+                    </KeyFrame>
+                </Animation>
+            </Style.Animations>
+        </Style>
     </UserControl.Resources>
-    <UserControl.Triggers>
-        <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-            <BeginStoryboard Storyboard="{StaticResource Eyes}"/>
-        </EventTrigger>
-    </UserControl.Triggers>
 
     <Grid x:Name="LayoutRoot">
 		<Canvas x:Name="Square">
 			<Rectangle  x:Name="Body" StrokeThickness="10" Stroke="#ff000000" Width="407" Height="207">
 				<Rectangle.Fill>
-					<RadialGradientBrush MappingMode="Absolute" GradientOrigin="110.185547,455" Center="110.185547,455" RadiusX="98.5" RadiusY="98.5">
+                    <RadialGradientBrush GradientOrigin="110.185547,455" Center="110.185547,455" Radius="98.5">
 						<RadialGradientBrush.Transform>
 							<MatrixTransform Matrix="1,0,-0,-1,-6.685547,558.5" />
 						</RadialGradientBrush.Transform>
