--- a/BabySmash/App.axaml
+++ b/BabySmash/App.axaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="BabySmash.App"
     xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:BabySmash="clr-namespace:BabySmash" Startup="Application_Startup"    
-    >
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
        <StyleInclude Source="Styles/GlobalStyles.axaml"/>
     </Application.Resources>
+    <Application.Styles>
+        <FluentTheme Mode="Light" />
+    </Application.Styles>
 </Application>
