--- a/BabySmash/Shapes/CoolRectangle.axaml
+++ b/BabySmash/Shapes/CoolRectangle.axaml
@@ -8,27 +8,6 @@
     x:Name="UserControl"
     d:DesignWidth="6.667" d:DesignHeight="10">
     <UserControl.Resources>
-        <Style Selector="Canvas#Eyes">
-            <Style.Animations>
-                <Animation Duration="0:0:7.3" IterationCount="Infinite">
-                    <KeyFrame KeyTime="00:00:02.1">
-	                    <Setter Property="Opacity" Value="1"/>
-                    </KeyFrame>
-                    <KeyFrame KeyTime="00:00:02.1">
-	                    <Setter Property="Opacity" Value="0"/>
-                    </KeyFrame>
-                    <KeyFrame KeyTime="00:00:02.3">
-	                    <Setter Property="Opacity" Value="0"/>
-                    </KeyFrame>
-                    <KeyFrame KeyTime="00:00:02.3">
-	                    <Setter Property="Opacity" Value="1"/>
-                    </KeyFrame>
-                    <KeyFrame KeyTime="00:00:7.3">
-	                    <Setter Property="Opacity" Value="1"/>
-                    </KeyFrame>
-                </Animation>
-            </Style.Animations>
-        </Style>
     </UserControl.Resources>
 
     <Grid x:Name="LayoutRoot">
@@ -45,10 +24,10 @@
 				</Rectangle.Fill>
 			</Rectangle>
             <Canvas x:Name="Face">
-                <Canvas x:Name="Eyes">
-               <Path Fill="#ff000000" Data="F1 M 93.295410,58.927246 C 93.295410,55.992676 90.916504,53.613281 87.981445,53.613281 L 78.018066,53.613281 C 75.083496,53.613281 72.704590,55.992676 72.704590,58.927246 L 72.704590,91 L 93.295410,91 L 93.295410,58.927246 Z" Height="91" Canvas.Left="98" Canvas.Top="0" Width="93" />
-    			<Path Fill="#ff000000" Data="F1 M 134.295410,58.927246 C 134.295410,55.992676 131.916504,53.613281 128.981445,53.613281 L 119.018066,53.613281 C 116.083496,53.613281 113.704590,55.992676 113.704590,58.927246 L 113.704590,91 L 134.295410,91 L 134.295410,58.927246 Z" Height="91" Canvas.Left="98" Canvas.Top="0" Width="134.295" />
-                    </Canvas>
+	            <Canvas x:Name="Eyes" Classes="BlinkingEye">
+		            <Path Fill="#ff000000" Data="F1 M 93.295410,58.927246 C 93.295410,55.992676 90.916504,53.613281 87.981445,53.613281 L 78.018066,53.613281 C 75.083496,53.613281 72.704590,55.992676 72.704590,58.927246 L 72.704590,91 L 93.295410,91 L 93.295410,58.927246 Z" Height="91" Canvas.Left="98" Canvas.Top="0" Width="93" />
+		            <Path Fill="#ff000000" Data="F1 M 134.295410,58.927246 C 134.295410,55.992676 131.916504,53.613281 128.981445,53.613281 L 119.018066,53.613281 C 116.083496,53.613281 113.704590,55.992676 113.704590,58.927246 L 113.704590,91 L 134.295410,91 L 134.295410,58.927246 Z" Height="91" Canvas.Left="98" Canvas.Top="0" Width="134.295" />
+	            </Canvas>
 			    <Path Fill="#ff000000" Data="F1 M 122.779297,145.530762 C 122.779297,156.178223 114.147461,164.810059 103.5,164.810059 C 92.852539,164.810059 84.220703,156.178223 84.220703,145.530762 C 84.220703,134.883301 92.852539,145.530762 103.5,145.530762 C 114.147461,145.530762 122.779297,134.883301 122.779297,145.530762 Z" Height="164.81" Canvas.Left="98" Canvas.Top="0" Width="122.779" />
             </Canvas>
         </Canvas>
