--- a/BabySmash/Shapes/CoolSquare.axaml
+++ b/BabySmash/Shapes/CoolSquare.axaml
@@ -23,7 +23,7 @@
             </Rectangle>
 
             <Canvas x:Name="Face">
-                <Canvas x:Name="Eyes" Classes="BlinkingEye">
+                <Canvas x:Name="Eyes" Classes="blinkingEye">
                     <Path Fill="#ff000000" Data="F1 M 93.295410,58.927246 C 93.295410,55.992676 90.916504,53.613281 87.981445,53.613281 L 78.018066,53.613281 C 75.083496,53.613281 72.704590,55.992676 72.704590,58.927246 L 72.704590,91 L 93.295410,91 L 93.295410,58.927246 Z"/>
                     <Path Fill="#ff000000" Data="F1 M 134.295410,58.927246 C 134.295410,55.992676 131.916504,53.613281 128.981445,53.613281 L 119.018066,53.613281 C 116.083496,53.613281 113.704590,55.992676 113.704590,58.927246 L 113.704590,91 L 134.295410,91 L 134.295410,58.927246 Z"/>
                 </Canvas>
