--- a/BabySmash/Styles/GlobalStyles.axaml
+++ b/BabySmash/Styles/GlobalStyles.axaml
@@ -24,10 +24,10 @@
     </Style>
 
     <Style Selector=":is(Control).shapes">
+        <Setter Property="RenderTransformOrigin" Value="50%,50%"/>
         <Setter Property="Transitions">
             <Transitions>
-                <DoubleTransition Property="Opacity" Duration="0:0:1" Delay="0:0:3" />
-                <TransformOperationsTransition Property="RenderTransform" Duration="0:0:1" />
+                <DoubleTransition Property="Opacity" Duration="0:0:1" />
             </Transitions>
         </Setter>
     </Style>
@@ -35,4 +35,140 @@
     <Style Selector=":is(Control).fadeAfter">
         <Setter Property="Opacity" Value="0" />
     </Style>
+    
+    <Style Selector=":is(Control).jiggle">
+        <Style.Animations>
+            <Animation Duration="0:0:1">
+                <KeyFrame Cue="0%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="12.5%">
+                    <Setter Property="RotateTransform.Angle" Value="10" />
+                </KeyFrame>
+                <KeyFrame Cue="25%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="37.5%">
+                    <Setter Property="RotateTransform.Angle" Value="-10" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="62.5%">
+                    <Setter Property="RotateTransform.Angle" Value="5" />
+                </KeyFrame>
+                <KeyFrame Cue="75%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="87.5">
+                    <Setter Property="RotateTransform.Angle" Value="-5" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    
+    <Style Selector=":is(Control).throb">
+        <Style.Animations>
+            <Animation Duration="0:0:1">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="11%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1.1" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1.1" />
+                </KeyFrame>
+                <KeyFrame Cue="22%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="33%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="0.9" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="0.9" />
+                </KeyFrame>
+                <KeyFrame Cue="44%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="55%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1.05" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1.05" />
+                </KeyFrame>
+                <KeyFrame Cue="66%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="77%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="0.95" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="0.95" />
+                </KeyFrame>
+                <KeyFrame Cue="88%">
+                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    
+    <Style Selector=":is(Control).rotate">
+        <Style.Animations>
+            <Animation Duration="0:0:1">
+                <KeyFrame Cue="0%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="11%">
+                    <Setter Property="RotateTransform.Angle" Value="-5" />
+                </KeyFrame>
+                <KeyFrame Cue="22%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="33%">
+                    <Setter Property="RotateTransform.Angle" Value="90" />
+                </KeyFrame>
+                <KeyFrame Cue="44%">
+                    <Setter Property="RotateTransform.Angle" Value="180" />
+                </KeyFrame>
+                <KeyFrame Cue="55%">
+                    <Setter Property="RotateTransform.Angle" Value="270" />
+                </KeyFrame>
+                <KeyFrame Cue="66%">
+                    <Setter Property="RotateTransform.Angle" Value="360" />
+                </KeyFrame>
+                <KeyFrame Cue="77%">
+                    <Setter Property="RotateTransform.Angle" Value="365" />
+                </KeyFrame>
+                <KeyFrame Cue="88%">
+                    <Setter Property="RotateTransform.Angle" Value="360" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <!-- -->
+    <!-- -->
+    <Style Selector=":is(Control).snap">
+        <Style.Animations>
+            <Animation Duration="0:0:1">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <!--   -->
+    <!-- -->
+    
+    <!-- -->
+    <!-- <Style Selector="Border.Rect3:pointerover"> -->
+    <!--     <Setter Property="RenderTransform" Value="1turn" /> -->
+    <!-- </Style> -->
+
 </Styles>
